[project]
name = "waypoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.11.0",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.13",
    "streamlit>=1.59.2",
    "torch",
    "torchvision>=0.28.0",
    "webvtt-py>=0.5.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
